did description wrong

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   		<title>IMDb</title>
-		<meta name="description">I Make Dream beds</meta>
+		<meta name="description" content="I Make Dream beds">
 	</head>
   
 	<body>
